--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "todo",
-  "version": "1.0.0",
-  "description": "Basic MEAN stack to-do app",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon -L ./index.js"
-  },
-  "author": "Joanna Kolowca",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.9",
-    "morgan": "^1.10.0"
-  }
+   "name": "todo",
+   "version": "1.0.0",
+   "description": "Basic MEAN stack to-do app",
+   "main": "index.ts",
+   "scripts": {
+      "start": "nodemon -L ./build/index.js"
+   },
+   "author": "Joanna Kolowca",
+   "license": "ISC",
+   "dependencies": {
+      "@types/cors": "^2.8.6",
+      "@types/express": "^4.17.7",
+      "@types/mongodb": "^3.5.25",
+      "@types/morgan": "^1.9.1",
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "mongodb": "^3.5.9",
+      "morgan": "^1.10.0"
+   },
+   "devDependencies": {
+      "ts-node": "^8.10.2"
+   }
 }
